prompt changed with variables

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_GEMINI_API_KEY="AIzaSyCUv6tIOCu3rg6hSZqPrwj_CgvmLLl78jA"
+NEXT_PUBLIC_GEMINI_API="AIzaSyCUv6tIOCu3rg6hSZqPrwj_CgvmLLl78jA"
 NEXT_PUBLIC_MONGODB_API=  "mongodb+srv://Nitish:Nitish@cluster0.scn3tky.mongodb.net/new-ai-proctor?retryWrites=true&w=majority&appName=Cluster0";
